Name:                hlevy
Version:             0.0.0.1
Description:         Implementation of the Levy language
License:             BSD
License-file:        LICENSE
Author:              Ben Moseley
Maintainer:          ben@moseley.name
Build-Type:          Simple
Cabal-Version:       >=1.2
Executable hlevy
  hs-source-dirs:    src
  Main-is:           Main.hs
  Build-Depends:     base >= 3 && < 5,
                     uu-parsinglib > 2.7
